Adding Membase to project

--- a/Services/SEO Services/SEOServices/Web.config
+++ b/Services/SEO Services/SEOServices/Web.config
@@ -1,11 +1,19 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <configuration>
+  <configSections>
+    <section name="couchbase" type="Couchbase.Configuration.CouchbaseClientSection, Couchbase"/>
+  </configSections>
+  <couchbase>
+    <servers bucket="SEO" bucketPassword="">
+      <add uri="http://127.0.0.1:8091/pools"/>
+    </servers>
+  </couchbase>
 
   <appSettings>
-    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
+    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.5"/>
     <httpRuntime targetFramework="4.5"/>
   </system.web>
   <system.serviceModel>
@@ -20,9 +28,9 @@
       </serviceBehaviors>
     </behaviors>
     <protocolMapping>
-        <add binding="basicHttpsBinding" scheme="https" />
+        <add binding="basicHttpsBinding" scheme="https"/>
     </protocolMapping>    
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true"/>
   </system.serviceModel>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true"/>
@@ -32,5 +40,20 @@
       -->
     <directoryBrowse enabled="true"/>
   </system.webServer>
-
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30AD4FE6B2A6AEED" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0"/>
+			</dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
+        <!-- 
+           Assembly versions can be redirected in application, 
+           publisher policy, or machine configuration files.
+         -->
+        <bindingRedirect oldVersion="1.0.0.0-4.5.11.0" newVersion="4.5.0.0"/>
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
