--- a/Services/SEO Services/SEOServices/packages.config
+++ b/Services/SEO Services/SEOServices/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CouchbaseNetClient" version="1.3.4" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="4.0.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.2" targetFramework="net45" />
 </packages>
