--- a/Services/SEO Services/SEOServices/bin/SEOServices.dll.config
+++ b/Services/SEO Services/SEOServices/bin/SEOServices.dll.config
@@ -8,13 +8,19 @@
       <add uri="http://127.0.0.1:8091/pools"/>
     </servers>
   </couchbase>
+  <appSettings/>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
-  <appSettings>
-    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
-  </appSettings>
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.5" />
+      </system.Web>
+  -->
   <system.web>
     <compilation debug="true" targetFramework="4.5"/>
-    <httpRuntime targetFramework="4.5"/>
+    <httpRuntime/>
+    <pages controlRenderingCompatibilityVersion="4.0"/>
   </system.web>
   <system.serviceModel>
     <behaviors>
@@ -28,8 +34,8 @@
       </serviceBehaviors>
     </behaviors>
     <protocolMapping>
-        <add binding="basicHttpsBinding" scheme="https"/>
-    </protocolMapping>    
+      <add binding="basicHttpsBinding" scheme="https"/>
+    </protocolMapping>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true"/>
   </system.serviceModel>
   <system.webServer>
@@ -42,10 +48,10 @@
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-			<dependentAssembly>
-				<assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30AD4FE6B2A6AEED" culture="neutral"/>
-				<bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0"/>
-			</dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30AD4FE6B2A6AEED" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0"/>
+      </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
         <!-- 
