--- a/Front End/Operation Keyword/SeoFrontEnd/OperationKeyword.csproj
+++ b/Front End/Operation Keyword/SeoFrontEnd/OperationKeyword.csproj
@@ -280,6 +280,15 @@
     <Content Include="Service References\ServiceReference1\SeoFrontEnd.ServiceReference1.GetWebsiteInfoResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
+    <Content Include="Service References\ServiceReference1\SeoFrontEnd.ServiceReference1.CrawlKeywordResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Service References\ServiceReference1\SeoFrontEnd.ServiceReference1.GetAllKeywordsResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Service References\ServiceReference1\SeoFrontEnd.ServiceReference1.GetKeywordStatsResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
     <None Include="Service References\ServiceReference1\Service1.disco" />
     <None Include="Service References\ServiceReference1\configuration91.svcinfo" />
     <None Include="Service References\ServiceReference1\configuration.svcinfo" />
@@ -343,6 +352,7 @@
     <None Include="Service References\ServiceReference1\Service13.xsd">
       <SubType>Designer</SubType>
     </None>
+    <Content Include="Views\Account\KeywordRanking.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
