--- a/Front End/Operation Keyword/SeoFrontEnd/OperationKeyword.csproj
+++ b/Front End/Operation Keyword/SeoFrontEnd/OperationKeyword.csproj
@@ -199,6 +199,11 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\account\application.css" />
+    <Content Include="Content\account\foundation.css" />
+    <Content Include="Content\account\grey.css" />
+    <Content Include="Content\account\layout_one.css" />
+    <Content Include="Content\account\scroll.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -257,6 +262,9 @@
     <Content Include="Global.asax" />
     <None Include="Properties\PublishProfiles\Operation Keyword.pubxml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
+    <Content Include="Images\application.png" />
+    <Content Include="Images\foundation.png" />
+    <Content Include="Images\page_fill.png" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
@@ -353,6 +361,8 @@
       <SubType>Designer</SubType>
     </None>
     <Content Include="Views\Account\KeywordRanking.cshtml" />
+    <Content Include="Views\Shared\_LayoutAccount.cshtml" />
+    <Content Include="Views\Account\Website.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
