--- a/Front End/Operation Keyword/SeoFrontEnd/OperationKeyword.csproj
+++ b/Front End/Operation Keyword/SeoFrontEnd/OperationKeyword.csproj
@@ -283,9 +283,6 @@
     <Content Include="Service References\ServiceReference1\SeoFrontEnd.ServiceReference1.GetKeywordResultsResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
-    <Content Include="Service References\ServiceReference1\SeoFrontEnd.ServiceReference1.AddWebsiteInfoResponse.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </Content>
     <Content Include="Service References\ServiceReference1\SeoFrontEnd.ServiceReference1.GetWebsiteInfoResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
@@ -296,6 +293,15 @@
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
     <Content Include="Service References\ServiceReference1\SeoFrontEnd.ServiceReference1.GetKeywordStatsResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Service References\ServiceReference1\SeoFrontEnd.ServiceReference1.AddUserResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Service References\ServiceReference1\SeoFrontEnd.ServiceReference1.GetUserResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Service References\ServiceReference1\SeoFrontEnd.ServiceReference1.UpdateUserResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
     <None Include="Service References\ServiceReference1\Service1.disco" />
