--- a/Front End/Operation Keyword/SeoFrontEnd/OperationKeyword.csproj
+++ b/Front End/Operation Keyword/SeoFrontEnd/OperationKeyword.csproj
@@ -305,6 +305,9 @@
     <Content Include="Service References\ServiceReference1\SeoFrontEnd.ServiceReference1.UpdateUserResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
+    <Content Include="Service References\ServiceReference1\SeoFrontEnd.ServiceReference1.GetUserStatsResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
     <None Include="Service References\ServiceReference1\Service1.disco" />
     <None Include="Service References\ServiceReference1\configuration91.svcinfo" />
     <None Include="Service References\ServiceReference1\configuration.svcinfo" />
@@ -364,11 +367,9 @@
       <SubType>Designer</SubType>
     </None>
     <Content Include="Views\Shared\_DomainList.cshtml" />
-    <Content Include="Views\Account\Configure.cshtml" />
     <None Include="Service References\ServiceReference1\Service13.xsd">
       <SubType>Designer</SubType>
     </None>
-    <Content Include="Views\Account\KeywordRanking.cshtml" />
     <Content Include="Views\Shared\_LayoutAccount.cshtml" />
     <Content Include="Views\Account\Website.cshtml" />
     <Content Include="Views\Account\Reports.cshtml" />
